--- a/about.html
+++ b/about.html
@@ -1,1 +1,27 @@
 //create the about page information 
+
+//"about us" page. What information will we need. Names? Christian, Daniel Bartolini, Sacha, Franklin
+// "what is our purpose: Connect people to their community and professional opprotunities"
+//"We are students seeking to help residents of the Broward and Miami Dade community conenct to their community
+//in socially distanced environments. Connecting parents with special needs children to resources to keep their 
+//kids in a social environment, and special needs tutors"
+
+<div class="ct-pageWrapper" id="ct-js-wrapper">
+  <section class="company-heading intro-type" id="parallax-one">
+    <div class="container">
+      <div class="row product-title-info">
+        <div class="col-md-12">
+          <h1>About Us</h1>
+        </div>
+      </div>
+    </div>
+    <div class="parallax" id="parallax-cta" style="background-image:url(https://www.solodev.com/assets/hero/hero.jpg);"></div>
+  </section>
+  <section class="story-section company-sections ct-u-paddingBoth100 paddingBothHalf noTopMobilePadding" id="section">
+    <div class="container text-center">
+      <h2>What is our purpose?</h2>
+      <h3> connect people to their community and professional opportunities</h3>
+      <div class="col-md-8 col-md-offset-2">
+        <div class="red-border"></div>
+        <p class="ct-u-size22 ct-u-fontWeight300 marginTop40">Lorem s</p>
+        <!-- <a class="ct-u-marginTop60 btn btn-solodev-red btn-fullWidth-sm ct-u-size19" href="#">Learn More</a> -->
