--- a/about.html
+++ b/about.html
@@ -1,1 +1,10 @@
 //create the about page information 
+
+//About us:
+//We are committed to connecting people to their community and professional opportunities.
+//For parents with special needs children, we know how diffiult the situation has been during quarantine. 
+//Isolation is very counterproductive to effective cognitive dvelopment. This is why we are providing
+//resources for parents with special needs children to integrate into their community in socially distanced environments.
+//In this way, children can get the social exposure they need while also maintaining a safe distance. 
+//Emphasis is placed on children with special needs, but all children are welcome!
+//Parents can also find resoures linking them to special needs tutors.
